@@ -1,3 +1,8 @@
+2006-04-04  Matthias Clasen  <mclasen@redhat.com>
+
+	* glib/glib-sections.txt:
+	* glib/glib-docs.sgml: Add Base64 section
+
 2006-04-03  Matthias Clasen  <mclasen@redhat.com>
 
 	* gobject/tmpl/objects.sgml: Add some verbiage to 
